chuyển sang phương pháp ghi nhiều file và gộp lại thành một